VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc2Down.err
[8MB/455MB][  1%][>                                                 ][2.667MB/s]  [16MB/455MB][  3%][=>                                                ][4MB/s]  [24MB/455MB][  5%][==>                                               ][4.8MB/s]  [32MB/455MB][  7%][===>                                              ][5.333MB/s]  [40MB/455MB][  8%][====>                                             ][5.714MB/s]  [48MB/455MB][ 10%][=====>                                            ][6MB/s]  [56MB/455MB][ 12%][======>                                           ][6.222MB/s]  [64MB/455MB][ 14%][=======>                                          ][6.4MB/s]  [72MB/455MB][ 15%][=======>                                          ][6.545MB/s]  [80MB/455MB][ 17%][========>                                         ][6.667MB/s]  [88MB/455MB][ 19%][=========>                                        ][6.769MB/s]  [96MB/455MB][ 21%][==========>                                       ][6.857MB/s]  [104MB/455MB][ 22%][===========>                                      ][6.933MB/s]  [112MB/455MB][ 24%][============>                                     ][7MB/s]  [120MB/455MB][ 26%][=============>                                    ][7.059MB/s]  [128MB/455MB][ 28%][==============>                                   ][7.111MB/s]  [136MB/455MB][ 29%][==============>                                   ][7.158MB/s]  [144MB/455MB][ 31%][===============>                                  ][7.2MB/s]  [152MB/455MB][ 33%][================>                                 ][7.238MB/s]  [160MB/455MB][ 35%][=================>                                ][7.273MB/s]  [168MB/455MB][ 36%][==================>                               ][7.304MB/s]  [176MB/455MB][ 38%][===================>                              ][7.333MB/s]  [184MB/455MB][ 40%][====================>                             ][7.36MB/s]  [192MB/455MB][ 42%][=====================>                            ][7.111MB/s]  [200MB/455MB][ 43%][=====================>                            ][7.143MB/s]  [208MB/455MB][ 45%][======================>                           ][7.172MB/s]  [216MB/455MB][ 47%][=======================>                          ][7.2MB/s]  [224MB/455MB][ 49%][========================>                         ][7.226MB/s]  [232MB/455MB][ 50%][=========================>                        ][7.25MB/s]  [240MB/455MB][ 52%][==========================>                       ][7.273MB/s]  [248MB/455MB][ 54%][===========================>                      ][7.294MB/s]  [256MB/455MB][ 56%][============================>                     ][7.314MB/s]  [264MB/455MB][ 58%][=============================>                    ][7.333MB/s]  [272MB/455MB][ 59%][=============================>                    ][7.351MB/s]  [280MB/455MB][ 61%][==============================>                   ][7.368MB/s]  [288MB/455MB][ 63%][===============================>                  ][7.385MB/s]  [296MB/455MB][ 65%][================================>                 ][7.4MB/s]  [304MB/455MB][ 66%][=================================>                ][7.415MB/s]  [312MB/455MB][ 68%][==================================>               ][7.429MB/s]  [320MB/455MB][ 70%][===================================>              ][7.442MB/s]  [328MB/455MB][ 72%][====================================>             ][7.455MB/s]  [336MB/455MB][ 73%][====================================>             ][7.467MB/s]  [344MB/455MB][ 75%][=====================================>            ][7.478MB/s]  [352MB/455MB][ 77%][======================================>           ][7.489MB/s]  [360MB/455MB][ 79%][=======================================>          ][7.5MB/s]  [368MB/455MB][ 80%][========================================>         ][7.51MB/s]  [376MB/455MB][ 82%][=========================================>        ][7.52MB/s]  [384MB/455MB][ 84%][==========================================>       ][7.529MB/s]  [392MB/455MB][ 86%][===========================================>      ][7.538MB/s]  [400MB/455MB][ 87%][===========================================>      ][7.547MB/s]  [408MB/455MB][ 89%][============================================>     ][7.556MB/s]  [416MB/455MB][ 91%][=============================================>    ][7.564MB/s]  [424MB/455MB][ 93%][==============================================>   ][7.571MB/s]  [432MB/455MB][ 94%][===============================================>  ][7.579MB/s]  [440MB/455MB][ 96%][================================================> ][7.586MB/s]  [448MB/455MB][ 98%][=================================================>][7.593MB/s]  [455MB/455MB][100%][==================================================][7.583MB/s]  [455MB/455MB][100%][==================================================][7.583MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_16393/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_16393/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
